// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`account when the wrapper is not loading anymore account information with group information 1`] = `
<div class="account-page-info-groups oc-mb oc-width-1-2@s">
  <dt class="oc-text-normal oc-text-muted">
    Group memberships
  </dt>
  <dd><span>one, two, three</span></dd>
</div>
`;

exports[`account when the wrapper is not loading anymore account information without group information 1`] = `
<dl class="account-page-info oc-flex oc-flex-wrap">
  <div class="account-page-info-username oc-mb oc-width-1-2@s">
    <dt class="oc-text-normal oc-text-muted">Username</dt>
    <dd>
      some-username
    </dd>
  </div>
  <!---->
  <div class="account-page-info-displayname oc-mb oc-width-1-2@s">
    <dt class="oc-text-normal oc-text-muted">Display name</dt>
    <dd>
      some-displayname
    </dd>
  </div>
  <div class="account-page-info-email oc-mb oc-width-1-2@s">
    <dt class="oc-text-normal oc-text-muted">Email</dt>
    <dd>some-email</dd>
  </div>
  <div class="account-page-info-groups oc-mb oc-width-1-2@s">
    <dt class="oc-text-normal oc-text-muted">
      Group memberships
    </dt>
    <dd><span>You are not part of any group</span></dd>
  </div>
</dl>
`;

exports[`account when the wrapper is not loading anymore edit buttons edit route button should be displayed if running with ocis and has navItems 1`] = `
<oc-button-stub variation="primary" type="router-link" to="some-route" data-testid="account-page-edit-route-btn">
  <oc-icon-stub name="edit"></oc-icon-stub>
  <translate-stub tag="span">Edit</translate-stub>
</oc-button-stub>
`;

exports[`account when the wrapper is not loading anymore edit buttons edit route button should be displayed if running with ocis and has navItems 2`] = `
Object {
  "data-testid": "account-page-edit-route-btn",
  "to": "some-route",
  "type": "router-link",
  "variation": "primary",
}
`;

exports[`account when the wrapper is not loading anymore edit buttons edit url button should be displayed if not running with ocis 1`] = `
<oc-button-stub variation="primary" type="a" href="http://server/address/index.php/settings/personal" data-testid="account-page-edit-url-btn">
  <oc-icon-stub name="edit"></oc-icon-stub>
  <translate-stub tag="span">Edit</translate-stub>
</oc-button-stub>
`;

exports[`account when the wrapper is not loading anymore edit buttons edit url button should be displayed if not running with ocis 2`] = `
Object {
  "data-testid": "account-page-edit-url-btn",
  "href": "http://server/address/index.php/settings/personal",
  "type": "a",
  "variation": "primary",
}
`;
